--- a/css/style.css
+++ b/css/style.css
@@ -136,20 +136,26 @@ header .content h3::after {
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-inline: unset;
     margin-inline: 1.25rem;
-}
-
-.navbar-nav .nav-link.active {
     position: relative;
 }
 
 .navbar-nav .nav-link.active::after {
+    width: 100%;
+    opacity: 1;
+}
+.navbar-nav .nav-link::after {
     content: "";
     position: absolute;
-    width: 100%;
-    height: .1875rem;
+    width: 0%;
+    height: .125rem;
     left: 0;
     top: 75%;
     background-color: var(--mainColor);
+    transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
 }
 /****************** End Header ******************/
 
