Make Home Background Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ header {
     background-repeat: no-repeat;
     background-position: 0% 0%;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 header .content p {
